# preOOP

coordinates&distance/: Coordinates.h  Makefile
doxyCMake/: CMakeLists.txt  doxyfile.in  lib.cpp  lib.h  main.cpp
doxyCMake/bd/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Tutorial  cmake_install.cmake  compile_commands.json
lab1/: Makefile  StudentList.h  StudentsList.cpp  main.cpp
lab10/: Makefile  Vector.cpp  Vector.h
lab11/: Fraction.cpp  Fraction.h  FractionArray.cpp  FractionArray.h  Makefile  Maths.h  main.cpp
lab2/: ListFunctions.cpp  ListFunctions.h  Makefile  Pair.h  check_number.h  find_ctrl.cpp  main.cpp  number_correct.cpp
lab3/: Functions.cpp  Functions.h  Makefile  main.cpp
lab4/: Functions.cpp  Functions.h  main.cpp
lab4a/: Makefile  MapPoint.cpp  MapPoint.h  main.cpp
lab5/classyBits/: Bits.cpp  Bits.h  CMakeLists.txt  main.cpp
lab6/: Coordinates.cpp  main.cpp
lab7/: MyString.h  main.cpp
lab8/: Book.cpp  Book.d  Book.h  BooksShelf.cpp  BooksShelf.d  BooksShelf.h  lab08.cpp  lab08.d
lab9/: .Vector2D.h.swp  .lab09.cpp.swp  Vector2D.cpp  Vector2D.d  Vector2D.h  lab09.d
